<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="accessibility_pause_video">Pause video</string>
    <string name="accessibility_play_video">Play video</string>
    <string name="accessibility_reload_video">Reload video</string>
    <string name="accessibility_time_bar">Video player time bar</string>
    <string name="details_hms">%1$d:%2$02d:%3$02d</string>
    <string name="details_ms">%1$02d:%2$02d</string>
    <string name="exo_controls_fastforward_description">Fast forward</string>
    <string name="exo_controls_next_description">Next track</string>
    <string name="exo_controls_pause_description">Pause</string>
    <string name="exo_controls_play_description">Play</string>
    <string name="exo_controls_previous_description">Previous track</string>
    <string name="exo_controls_repeat_all_description">Repeat all</string>
    <string name="exo_controls_repeat_off_description">Repeat none</string>
    <string name="exo_controls_repeat_one_description">Repeat one</string>
    <string name="exo_controls_rewind_description">Rewind</string>
    <string name="exo_controls_shuffle_description">Shuffle</string>
    <string name="exo_controls_stop_description">Stop</string>
    <string name="explorer">Explorer</string>
    <string name="fragment_translator">Translator</string>
    <string name="header_subtitle_gallery">Videos and Photos in the directory</string>
    <string name="header_title_gallery">Gallery</string>
    <string name="Loading">Loading</string>
    <string name="loading_video">Loading video\u2026</string>
    <string name="resume_playing_message">Resume playing from %s ?</string>
    <string name="resume_playing_restart">Start over</string>
    <string name="menu_language_zh">Chinese</string>
    <string name="menu_language_en">English</string>
    <string name="resume_playing_resume">Resume playing</string>
    <string name="resume_playing_title">Resume video</string>
    <string name="share">Share</string>
    <string name="translatePhoto">photo translate</string>
    <string name="translateVoice">voice translate</string>
    <string name="translationEditHint">Enter or paste words or sentences to translate.</string>
    <string name="translationResultTitle">译文</string>
    <string name="dialog_jump_description">当前播放视频的总时长:</string>
</resources>