<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:layout_editor_absoluteY="25dp">

    <!--<View-->
    <!--android:layout_width="0dp"-->
    <!--tools:layout_editor_absoluteX="0dp"-->
    <!--android:id="@+id/view"
android:background="@color/layout_background"-->
    <!--app:layout_constraintTop_toTopOf="parent"
android:layout_height="@dimen/statusbar_view_height"/>-->
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_source"
            app:layout_constraintTop_toTopOf="@+id/image_switcher"
            app:layout_constraintStart_toStartOf="parent"
            android:textSize="@dimen/txt_L1_english"
            android:textColor="@color/lex_prop_title" tools:text="语言自动检测"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/image_switcher"
            android:layout_marginStart="8dp"/>
    <ImageView
            android:layout_width="40dp"
            android:layout_height="20dp"
            app:srcCompat="@drawable/exchange"
            android:id="@+id/image_switcher"
            android:layout_marginStart="8dp"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="14dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"/>
    <TextView
            android:text="TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_target"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            android:textSize="@dimen/txt_L1_english"
            android:textColor="@color/lex_prop_title"
            app:layout_constraintTop_toTopOf="@+id/image_switcher" tools:text="英语"
            app:layout_constraintStart_toEndOf="@+id/image_switcher"
            android:layout_marginStart="8dp"/>

    <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="#ffebebeb"
            android:layout_marginTop="14dp"
            app:layout_constraintTop_toBottomOf="@+id/image_switcher"
            android:id="@+id/viewLine2"/>

    <EditText
            android:layout_width="0dp"
            android:layout_height="170dp"
            android:textSize="@dimen/txt_L1_english"
            android:textColor="@color/txt_L1"
            android:padding="@dimen/page_margin_default"
            android:textColorHint="@color/txt_disabled"
            android:id="@+id/editText"
            app:layout_constraintTop_toBottomOf="@+id/viewLine2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:background="@null"
            android:minLines="40"
            android:lineSpacingExtra="2.0dip"
            android:inputType="textMultiLine"
            android:hint="@string/translationEditHint"
            android:gravity="top"
            app:layout_constraintHorizontal_bias="0.0"/>
    <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ico_clear"
            android:id="@+id/image_clear"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@+id/editText"
            app:layout_constraintEnd_toEndOf="@+id/editText"
            android:layout_marginEnd="8dp"/>
    <TextView
            android:textSize="14.0sp"
            android:textColor="@color/translateVoiceTextColor"
            android:gravity="center"
            android:background="@drawable/shape_voice_translate_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="20.0dip"
            android:paddingTop="10.0dip"
            android:paddingRight="20.0dip"
            android:text="@string/translateVoice"
            android:drawableLeft="@drawable/microphone_small"
            android:drawablePadding="5.0dip"
            android:paddingBottom="10.0dip"
            android:id="@+id/textViewVoice"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/image_switcher"
            android:layout_marginTop="8dp"/>

    <TextView
            android:textSize="14.0sp"
            android:textColor="@color/translateVoiceTextColor"
            android:gravity="center"
            android:background="@drawable/shape_voice_translate_entry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/translatePhoto"
            android:drawableLeft="@drawable/photo_translate_icon"
            android:drawablePadding="5.0dip"
            android:paddingLeft="20.0dip"
            android:paddingTop="10.0dip"
            android:paddingRight="20.0dip"
            android:paddingBottom="10.0dip"
            android:id="@+id/text_photo"
            app:layout_constraintTop_toBottomOf="@+id/editText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_switcher"
            android:layout_marginTop="8dp"/>
    <View
            android:layout_width="match_parent"
            android:layout_height="0.5dip"
            android:background="#ffebebeb"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewVoice"
            android:id="@+id/viewLine3"/>

    <LinearLayout
            android:id="@+id/progress_container"
            android:orientation="horizontal"
            android:background="@drawable/border_lex_collapse"
            android:paddingLeft="@dimen/page_margin_default"
            android:paddingRight="@dimen/page_margin_default"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/textViewVoice"
            android:visibility="gone"
    >
        <ProgressBar android:layout_width="@dimen/iv_width_L1"
                     android:layout_height="@dimen/iv_height_L1"/>
        <TextView android:textSize="@dimen/txt_L2_chinese"
                  android:textColor="@color/txt_L2"
                  android:gravity="center"
                  android:layout_width="wrap_content"
                  android:layout_height="fill_parent"
                  android:layout_marginLeft="@dimen/page_margin_L2"
                  android:text="@string/Loading"/>
    </LinearLayout>
    <TextView
            android:textColor="@color/sentenceHistoryColor"
            android:textSize="@dimen/txt_L1_chinese"
            android:layout_width="wrap_content"
            android:text="@string/translationResultTitle"
            android:lineSpacingExtra="6.0dip"
            android:layout_height="wrap_content"
            android:id="@+id/textView5"
            android:background="@color/white"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toBottomOf="@+id/progress_container"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp"/>
    <androidx.core.widget.NestedScrollView android:layout_width="match_parent"
                                           android:layout_height="0dp"
                                           android:id="@+id/scrollView"
                                           app:layout_constraintStart_toStartOf="parent"
                                           android:layout_marginStart="16dp"
                                           app:layout_constraintTop_toBottomOf="@+id/textView5"
                                           app:layout_constraintEnd_toEndOf="parent"
                                           android:layout_marginEnd="16dp"
                                           android:layout_marginTop="8dp"
                                           android:layout_marginBottom="8dp"
                                           app:layout_constraintBottom_toTopOf="@+id/imageViewShare">
        <TextView android:textSize="@dimen/txt_L1_chinese"
                  android:textColor="@color/txt_L1"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:lineSpacingExtra="@dimen/page_margin_L4"
                  android:textIsSelectable="true"
                  android:id="@+id/text_result"/>
    </androidx.core.widget.NestedScrollView>

    <ImageView
            android:padding="8.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/voice_translate_share"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:id="@+id/imageViewShare"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/scrollView"
            android:layout_marginEnd="8dp"/>

    <ImageView android:padding="8.0dip"

               android:layout_width="wrap_content"
               android:layout_height="wrap_content"
               android:src="@drawable/voice_translate_magnify"
               android:layout_marginBottom="8dp"
               app:layout_constraintBottom_toBottomOf="parent"
               app:layout_constraintEnd_toStartOf="@+id/imageViewShare" android:id="@+id/imageViewMagnify"/>
    <ImageView
            android:padding="8.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/voice_translate_copy"
            android:id="@+id/image_copy" app:layout_constraintEnd_toStartOf="@+id/imageViewMagnify"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"/>
    <ImageView
            android:padding="8.0dip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/voice_translate_voice" app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toStartOf="@+id/image_copy"/>
</androidx.constraintlayout.widget.ConstraintLayout>